--- a/estilo.css
+++ b/estilo.css
@@ -1,56 +1,45 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 /*-----------------general-----------*/
-body{
+body {
     margin: 0px 0px 0px 0px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    }
-header{
+}
+
+header {
     width: 100%;
-    height: 200px;
+    height: 150px;
     background-color: black;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
+
 header div {
     height: 100%;
     width: 100%;
     display: flex;
     justify-content: center;
 }
-header div img{
+
+header div img {
     height: 150px;
     width: 100%;
     object-fit: contain;
 }
-
-header ul{
-    width: 100%;
-    height: 100%;   
-    list-style: none;
-    display: flex;
-    display:inline-flex;
+.navbar {
+    background-color: black;
+}
+.collapse {
     justify-content: center;
-    flex-wrap: wrap;
-    background-color: rgb(0, 0, 0);
-    padding-bottom: 5px; 
-}
-header ul li a{
-    text-decoration: none;
-    font-size: 23px;
-    margin-right: 10px; 
-    color: rgb(255, 255, 255);  
-}
-header nav a:hover{
-    color: rgb(94, 94, 94);
 }
 
 /*------------------footer--------------*/
-.whatsapp{
+.whatsapp {
     position: fixed;
     bottom: 20px;
     right: 40px;
@@ -62,138 +51,156 @@ header nav a:hover{
     border-radius: 50%;
     display: flex;
 }
-.whatsapp a{
+
+.whatsapp a {
     margin-bottom: auto;
     margin-top: auto;
     margin-right: auto;
     margin-left: auto;
     transition: all 0.5s;
 }
-.whatsapp:hover{
+
+.whatsapp:hover {
     transform: scale(1.2);
     transition: all 0.5s;
 }
 
-.whatsapp i{
+.whatsapp i {
     color: white;
 }
 
-footer{
+footer {
     border-top: solid 20px rgb(113, 0, 117);
     background-color: dimgrey;
     height: 100%;
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;  
-    flex-wrap: wrap;  
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
-footer .redes{
+
+footer .redes {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
 }
-footer .redes i{
+
+footer .redes i {
     font-size: 35px;
     color: rgb(0, 0, 0);
 }
-.redes i:hover{
+
+.redes i:hover {
     color: white;
 
 }
 
-.derechos{
+.derechos {
     text-align: center;
     background-color: dimgrey;
     font-size: 16px;
     font-style: italic;
 }
+
 /*-----------index------------*/
 
-main h1{
+main h1 {
     text-align: center;
     font-size: 20px;
     margin-top: 10px;
-    margin-bottom: 5px;    
-    } 
-    .imgPrincipal{
-    height: 300px;
+    margin-bottom: 5px;
+}
+
+.imgPrincipal {
+    height: 250px;
     width: 100%;
-    }
-    .porche{
+}
+
+.porche {
     height: 100%;
     width: 100%;
     object-fit: contain;
-    }
-    .tituloIndex{
+}
+
+.tituloIndex {
     text-align: center;
     text-transform: uppercase;
     font-size: 22px;
     margin: 5px 5px 5px 5px;
     overflow-wrap: break-word;
-    }
-    .tituloMarcas{
-        text-align: center;
+}
+
+.tituloMarcas {
+    text-align: center;
     text-transform: uppercase;
     font-size: 22px;
     margin: 5px 5px 5px 5px;
     overflow-wrap: break-word;
-    }
-    .marcas{
-        display: grid;
-        height: 100%;
-        width: 100%;
-        grid-template-columns: 1fr 1fr;
-        gap: 5px;
-    }
-    .imgMarcas{
-        justify-self: center;
-    }
-    .imgMarcas img{
-        height: 200px;
-        width: 100%;
-        object-fit: contain;   
-    }
-    .inicio{
+}
+
+.marcas {
+    display: grid;
+    height: 100%;
+    width: 100%;
+    grid-template-columns: 1fr 1fr;
+    gap: 5px;
+}
+
+.imgMarcas {
+    justify-self: center;
+}
+
+.imgMarcas img {
+    height: 200px;
+    width: 100%;
+    object-fit: contain;
+}
+
+.inicio {
     height: auto;
     width: 100%;
     font-style: italic;
-    overflow-wrap: break-word ;
+    overflow-wrap: break-word;
     text-align: center;
     margin-top: 10px;
     margin-bottom: 20px;
-    }
-    .contenedorReseñas{
-        height: 250px;
-        width: 100%;
-    }
-    .reseñas{
-        height: 250px;
-        width: 80%;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 10px;
-        margin-bottom: 30px;
-        justify-content: center;
-        background-color: rgb(231, 236, 235);
-    }
-    .textoreseñas{
-        width: 100%;
-        text-align: center;
-        padding: 15px 15px 15px 15px;
-        font-style: italic;
-        overflow-wrap: break-word;
-    }
-    
+}
+
+.contenedorReseñas {
+    height: 250px;
+    width: 100%;
+}
+
+.reseñas {
+    height: 250px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    justify-content: center;
+    background-color: rgb(231, 236, 235);
+}
+
+.textoreseñas {
+    width: 100%;
+    text-align: center;
+    padding: 15px 15px 15px 15px;
+    font-style: italic;
+    overflow-wrap: break-word;
+}
+
 /*-------------TRABAJOS-----------*/
 
-.galeria{
+.galeria {
     height: 100%;
-    width: 100%; 
+    width: 100%;
     display: grid;
     grid-template-columns: 100%;
 }
-.trabajos{
+
+.trabajos {
     height: 350px;
     width: 100%;
     object-fit: cover;
@@ -201,7 +208,8 @@ main h1{
     border: solid 1px black;
     transition: all 0.5s;
 }
-.trabajos:hover{
+
+.trabajos:hover {
     transform: scale(1.1);
     transition: 0.5s;
 }
@@ -209,78 +217,91 @@ main h1{
 
 
 /*--------------NOSOTROS-----------*/
-.nosotros1{
+.nosotros1 {
     display: grid;
     grid-template-columns: 100%;
 }
-.imgnosotros{
+
+.imgnosotros {
     grid-column: 1/2;
     grid-row: 1/2;
 }
-.imgnosotros img{
+
+.imgnosotros img {
     height: 300px;
     width: 100%;
     object-fit: contain;
 }
-.contenido{
+
+.contenido {
     grid-column: 1/2;
     grid-row: 2/3;
-    margin: 30px 30px 30px 30px;    
+    margin: 30px 30px 30px 30px;
 }
-.galeriainstalaciones{
+
+.galeriainstalaciones {
     display: grid;
     grid-template-columns: 100%;
     gap: 10px;
 }
-.inst1{
+
+.inst1 {
     grid-column: 1/2;
     grid-row: 1/2;
 }
-.inst2{
+
+.inst2 {
     grid-column: 1/2;
     grid-row: 2/3;
 }
-.inst3{
+
+.inst3 {
     grid-column: 1/2;
     grid-row: 3/4;
 }
-.inst4{
+
+.inst4 {
     grid-column: 1/2;
     grid-row: 4/5;
 }
-.instalaciones{
+
+.instalaciones {
     text-align: center;
 }
-.galeriainstalaciones{
+
+.galeriainstalaciones {
     margin: 30px 0px 30px 0px;
-    height: 100%;   
+    height: 100%;
 }
-.galeriainstalaciones img{
+
+.galeriainstalaciones img {
     height: 300px;
     width: 100%;
     object-fit: cover;
 }
 
 /*-------------SERVICIOS-----------*/
-.imgservicios{
+.imgservicios {
     height: 300px;
     width: 100%;
     object-fit: contain;
 }
-.textoserv{
+
+.textoserv {
     margin-left: 10px;
     margin-right: 10px;
     font-size: 18px;
     text-align: center;
 }
-.servicios{
+
+.servicios {
     display: grid;
     grid-template-columns: 1fr;
     gap: 10px;
 }
 
 /*-------------CONTACTO------------*/
-form{
+form {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 4fr 1fr;
@@ -291,9 +312,10 @@ form{
     width: 100%;
     justify-items: center;
     align-items: center;
-    
+
 }
-textarea{
+
+textarea {
     resize: none;
     width: 95%;
     height: 90%;
@@ -301,7 +323,8 @@ textarea{
     font-size: 16px;
     font-family: 'Times New Roman', Times, serif;
 }
-input{
+
+input {
     height: 40px;
     width: 95%;
     margin-top: 5px;
@@ -309,98 +332,121 @@ input{
     font-size: 16px;
     font-family: 'Times New Roman', Times, serif;
 }
-.enviar{
+
+.enviar {
     width: 50%;
 }
 
 /*---------------MEDIA-------------*/
 
 @media only screen and (min-width: 768px) {
-    main{
+    main {
         margin: 0 10px 0 10px;
     }
- /*--------index----------------*/
-    .inicio{
+
+    /*--------index----------------*/
+    .imgPrincipal {
+        height: 400px;
+        width: auto;
+    }
+    .inicio {
         height: auto;
         width: 500px;
-        margin: 0 auto ;
+        margin: 0 auto;
         font-style: italic;
-        overflow-wrap: break-word ;
+        overflow-wrap: break-word;
         text-align: center;
         margin-top: 10px;
         margin-bottom: 20px;
     }
-    .marcas{
+
+    .marcas {
         grid-template-columns: 1fr 1fr 1fr;
-        
+
     }
-    .imgMarcas{
+
+    .imgMarcas {
         justify-self: center;
     }
-    .contenedorReseñas{
+
+    .contenedorReseñas {
         margin-left: auto;
         margin-right: auto;
         width: 500px;
     }
-    .textoreseñas{
+
+    .textoreseñas {
         height: auto;
         width: auto;
-        margin: 0 auto ;
+        margin: 0 auto;
         font-style: italic;
-        overflow-wrap: break-word ;
+        overflow-wrap: break-word;
         text-align: center;
     }
- /*------------galeria----------*/
-    .imagenes{
+
+    /*------------galeria----------*/
+    .imagenes {
         margin: 0 20px 0 20px;
     }
-    .galeria{
+
+    .galeria {
         grid-template-columns: 1fr 1fr;
         column-gap: 10px;
     }
-    .trabajos{
+
+    .trabajos {
         height: 350px;
         width: 100%;
-    }    
-/*--------------NOSOTROS---------*/
-    .nosotros1{
-        grid-template-columns:  1fr 1fr;
     }
-    .imgnosotros{
-       grid-column: 1/2;
-       grid-row: 1/2;
-   } 
-   .contenido{
-       grid-column: 2/3;
-       grid-row: 1/2;
-   }
-   .galeriainstalaciones{
-       grid-template-columns: 1fr 1fr;
-       gap: 5px;
-   }
-   .inst1{
-       grid-column: 1/2;
-       grid-row: 1/2;
-   }
-   .inst2{
-    grid-column: 2/3;
-    grid-row: 1/2;
+
+    /*--------------NOSOTROS---------*/
+    .nosotros1 {
+        grid-template-columns: 1fr 1fr;
     }
-    .inst3{
-    grid-column: 1/2;
-    grid-row: 2/3;
+
+    .imgnosotros {
+        grid-column: 1/2;
+        grid-row: 1/2;
     }
-    .inst4{
-    grid-column: 2/3;
-    grid-row: 2/3;
+
+    .contenido {
+        grid-column: 2/3;
+        grid-row: 1/2;
     }
+
+    .galeriainstalaciones {
+        grid-template-columns: 1fr 1fr;
+        gap: 5px;
+    }
+
+    .inst1 {
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+
+    .inst2 {
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+
+    .inst3 {
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+
+    .inst4 {
+        grid-column: 2/3;
+        grid-row: 2/3;
+    }
+
     /*------------servicios-------------*/
-    .servicios{
+    .servicios {
         grid-template-columns: 1fr 1fr;
         gap: 20px;
     }
+
     /*------------contacto-------------*/
-    form{
+    form {
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 0.1fr 0.1fr 0.5fr 0.1fr;
@@ -413,32 +459,39 @@ input{
         justify-items: center;
         align-items: center;
     }
-    .nombre{
+
+    .nombre {
         grid-column: 1/2;
         grid-row: 1/2;
     }
-    .apellido{
+
+    .apellido {
         grid-column: 2/3;
         grid-row: 1/2;
     }
-    .mail{
+
+    .mail {
         grid-column: 1/2;
         grid-row: 2/3;
     }
-    .telefono{
+
+    .telefono {
         grid-column: 2/3;
         grid-row: 2/3;
     }
-    .mensaje{
+
+    .mensaje {
         grid-column: 1/3;
         grid-row: 3/4;
     }
-    .enviar{
+
+    .enviar {
         grid-column: 1/3;
         grid-row: 4/5;
         width: 30%;
     }
-    textarea{
+
+    textarea {
         resize: none;
         width: 95%;
         height: 90%;
@@ -446,52 +499,62 @@ input{
         font-size: 16px;
         font-family: 'Times New Roman', Times, serif;
     }
-    input{
+
+    input {
         height: 40px;
         width: 90%;
         font-size: 16px;
         font-family: 'Times New Roman', Times, serif;
     }
-}   
-@media only screen and (min-width: 1024px){
+}
+
+@media only screen and (min-width: 1024px) {
+
     /*---------index---------*/
-    main .index{
+    main .index {
         margin: 0px 30px 0px 30px;
     }
-    main h1{
-    text-align: center;
-    font-size: 20px;
-    margin-top: 10px;
-    margin-bottom: 5px;    
+
+    main h1 {
+        text-align: center;
+        font-size: 20px;
+        margin-top: 10px;
+        margin-bottom: 5px;
     }
-    .imgPrincipal{
-    text-align: center;
-    height: 500px;
-    width: 100%;
+
+    .imgPrincipal {
+        text-align: center;
+        height: 500px;
+        width: 100%;
     }
-    .porche{
-    height: 100%;
-    width: auto;
-    object-fit: contain;
+
+    .porche {
+        height: 100%;
+        width: auto;
+        object-fit: contain;
     }
-    .tituloIndex{
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 22px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+
+    .tituloIndex {
+        text-align: center;
+        text-transform: uppercase;
+        font-size: 22px;
+        margin-top: 5px;
+        margin-bottom: 5px;
     }
-    .marcas{
+
+    .marcas {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr ;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
         gap: 5px;
     }
-    .imgMarcas{
+
+    .imgMarcas {
         height: 200px;
         width: 100%;
         object-fit: contain;
     }
-    .reseñas{
+
+    .reseñas {
         height: 250px;
         width: 550px;
         margin-left: auto;
@@ -500,126 +563,150 @@ input{
         justify-content: center;
         background-color: rgb(231, 236, 235);
     }
-    .textoreseñas{
+
+    .textoreseñas {
         padding: 15px 15px 15px 15px;
     }
+
     /*------------galeria----------*/
-    .imagenes{
+    .imagenes {
         margin: 0 40px 0 40px;
     }
-    .galeria{
+
+    .galeria {
         grid-template-columns: 1fr 1fr 1fr;
     }
-    .trabajos{
+
+    .trabajos {
         height: 450px;
         width: 100%;
     }
+
     /*------------NOSOTROS---------*/
-    .nosotros1{
+    .nosotros1 {
         grid-template-columns: 1fr 1fr;
     }
-    .imgnosotros{
+
+    .imgnosotros {
         grid-column: 1/2;
         grid-row: 1/2;
     }
-    .contenido{
+
+    .contenido {
         grid-column: 2/3;
         grid-row: 1/2;
     }
-    .galeriainstalaciones{
+
+    .galeriainstalaciones {
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
-    .inst1{
+
+    .inst1 {
         grid-column: 1/2;
         grid-row: 1/2;
     }
-    .inst2{
+
+    .inst2 {
         grid-column: 2/3;
         grid-row: 1/2;
     }
-    .inst3{
+
+    .inst3 {
         grid-column: 3/4;
         grid-row: 1/2;
     }
-    .inst4{
+
+    .inst4 {
         grid-column: 4/5;
         grid-row: 1/2;
-    } 
- /*-----------servicios----------*/
- .servicios{
-    display: flex;
-    flex-direction: row;
-}
-.imgservicios{
-    height: 300px;
-    width: 500px;
-    margin-top: 20px;
-    margin-bottom: 15px;
-    object-fit: contain;
-}
-.textoserv{
-    margin: 30px 30px 30px 30px;
-}
-/*------------contacto-----------*/
+    }
 
-form{
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 0.5fr 0.5fr 1fr 0.5fr ;
-    gap: 10px;
-    background-color: rgb(0, 0, 0);
-    height: 400px;
-    width: 650px;
-    text-align: center;
-    padding-top: 60px;
-    padding-bottom: 60px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 100px;
-    margin-top: 50px;
-}
-.nombre{
-    grid-column: 1/2;
-    grid-row: 1/2;
-    justify-self: end;
-}
-.apellido{
-    grid-column: 2/3;
-    grid-row: 1/2;
-    justify-self: start;
-}
-.mail{
-    grid-column: 1/2;
-    grid-row: 2/3;
-    justify-self: end;
-}
-.telefono{
-    grid-column: 2/3;
-    grid-row: 2/3;
-    justify-self: start;
-}
-.mensaje{
-    grid-column: 1/3;
-    grid-row: 3/4;
-    height: 150px;
-}
-.enviar{
-    grid-column: 1/3;
-    grid-row: 4/5;
-    width: 30%;
-}
-textarea{
-    resize: none;
-    width: 408px;
-    margin-top: 5px;
-    font-size: 16px;
-    font-family: 'Times New Roman', Times, serif;
-}
-input{
-    height: 30px;
-    width: 200px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    font-size: 16px;
-    font-family: 'Times New Roman', Times, serif;
-}
+    /*-----------servicios----------*/
+    .servicios {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .imgservicios {
+        height: 300px;
+        width: 500px;
+        margin-top: 20px;
+        margin-bottom: 15px;
+        object-fit: contain;
+    }
+
+    .textoserv {
+        margin: 30px 30px 30px 30px;
+    }
+
+    /*------------contacto-----------*/
+
+    form {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 0.5fr 0.5fr 1fr 0.5fr;
+        gap: 10px;
+        background-color: rgb(0, 0, 0);
+        height: 400px;
+        width: 650px;
+        text-align: center;
+        padding-top: 60px;
+        padding-bottom: 60px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 100px;
+        margin-top: 50px;
+    }
+
+    .nombre {
+        grid-column: 1/2;
+        grid-row: 1/2;
+        justify-self: end;
+    }
+
+    .apellido {
+        grid-column: 2/3;
+        grid-row: 1/2;
+        justify-self: start;
+    }
+
+    .mail {
+        grid-column: 1/2;
+        grid-row: 2/3;
+        justify-self: end;
+    }
+
+    .telefono {
+        grid-column: 2/3;
+        grid-row: 2/3;
+        justify-self: start;
+    }
+
+    .mensaje {
+        grid-column: 1/3;
+        grid-row: 3/4;
+        height: 150px;
+    }
+
+    .enviar {
+        grid-column: 1/3;
+        grid-row: 4/5;
+        width: 30%;
+    }
+
+    textarea {
+        resize: none;
+        width: 408px;
+        margin-top: 5px;
+        font-size: 16px;
+        font-family: 'Times New Roman', Times, serif;
+    }
+
+    input {
+        height: 30px;
+        width: 200px;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        font-size: 16px;
+        font-family: 'Times New Roman', Times, serif;
+    }
 }
