--- a/estilo.css
+++ b/estilo.css
@@ -31,9 +31,11 @@ header div img {
     width: 100%;
     object-fit: contain;
 }
+
 .navbar {
     background-color: black;
 }
+
 .collapse {
     justify-content: center;
 }
@@ -52,10 +54,7 @@ header div img {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-#iconowhatsapp {
-     transition: all 0.5s;
+    transition: all 0.5s;
 }
 
 #whatsapp:hover {
@@ -110,31 +109,52 @@ main h1 {
     margin-bottom: 5px;
 }
 
-.imgPrincipal {
-    height: 250px;
-    width: 100%;
+.carousel-item {
+    height: 300px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
-.porche {
-    height: 100%;
+.d-block {
+    height: auto;
     width: 100%;
     object-fit: contain;
+    padding-top: 10px;
+}
+
+.carousel-control-next-icon {
+    color: black;
 }
 
 .tituloIndex {
     text-align: center;
     text-transform: uppercase;
-    font-size: 22px;
-    margin: 5px 5px 5px 5px;
+    font-size: 24px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    margin: 10px 5px 5px 5px;
+    padding-top: 10px;
     overflow-wrap: break-word;
+    text-shadow: 2px 2px rgb(126, 126, 126);
+}
+
+.inicio {
+    height: auto;
+    width: 100%;
+    font-style: italic;
+    overflow-wrap: break-word;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 20px;
 }
 
 .tituloMarcas {
     text-align: center;
     text-transform: uppercase;
-    font-size: 22px;
+    font-size: 24px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     margin: 5px 5px 5px 5px;
     overflow-wrap: break-word;
+    text-shadow: 2px 2px rgb(126, 126, 126);
 }
 
 .marcas {
@@ -155,15 +175,12 @@ main h1 {
     object-fit: contain;
 }
 
-.inicio {
-    height: auto;
-    width: 100%;
-    font-style: italic;
-    overflow-wrap: break-word;
+.tituloReseñas {
     text-align: center;
-    margin-top: 10px;
-    margin-bottom: 20px;
+    text-transform: uppercase;
+    font-size: 20px;
 }
+
 
 .contenedorReseñas {
     height: 250px;
@@ -171,7 +188,7 @@ main h1 {
 }
 
 .reseñas {
-    height: 250px;
+    height: 220px;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
@@ -179,6 +196,7 @@ main h1 {
     margin-bottom: 30px;
     justify-content: center;
     background-color: rgb(231, 236, 235);
+    border-radius: 15px 15px 15px 15px;
 }
 
 .textoreseñas {
@@ -343,10 +361,19 @@ input {
     }
 
     /*--------index----------------*/
-    .imgPrincipal {
-        height: 400px;
-        width: auto;
+    .carousel-item {
+        height: auto;
+        padding-left: 5px;
+        padding-right: 5px;
     }
+
+    .d-block {
+        height: 400px;
+        width: 100%;
+        object-fit: contain;
+        padding-top: 10px;
+    }
+
     .inicio {
         height: auto;
         width: 500px;
@@ -520,16 +547,15 @@ input {
         margin-bottom: 5px;
     }
 
-    .imgPrincipal {
-        text-align: center;
-        height: 500px;
-        width: 100%;
+    .carousel-item {
+        height: auto;
     }
 
-    .porche {
-        height: 100%;
-        width: auto;
+    .d-block {
+        height: 550px;
+        width: 100%;
         object-fit: contain;
+        padding-top: 10px;
     }
 
     .tituloIndex {
