--- a/estilo.scss
+++ b/estilo.scss
@@ -5,15 +5,25 @@
 }
 
 /*-----------------general-----------*/
+//Variables
+$tablet: 768px;
+$desktop: 1024px;
+$colorletra1: rgb(208, 208, 208);
+//mapa
+$tamañodefuente: (
+    "small": 16px,
+    "medium": 24px,
+    "large": 32px
+);
+
 body {
     margin: 0px 0px 0px 0px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: rgb(208, 208, 208);
+    color: $colorletra1;
     background: #000000;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to top, dimgrey, #000000);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to top, dimgrey, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     main {
-        margin: 0;
         border-top: solid 5px rgb(113, 0, 117);  
         }
     header {
@@ -36,7 +46,9 @@ body {
         }
     }
 }
-
+#navegacion{
+    color: $colorletra1;
+}
 .navbar {
     background-color: black;
 }
@@ -46,7 +58,7 @@ body {
 }
 h1 {
     text-align: center;
-    font-size: 20px;
+    font-size: map-get($map: $tamañodefuente, $key: "medium");
     margin-top: 10px;
     margin-bottom: 5px;
 }
@@ -99,7 +111,7 @@ footer {
 .derechos {
     text-align: center;
     background-color: dimgrey;
-    font-size: 16px;
+    font-size: map-get($map: $tamañodefuente, $key: "small" );
     font-style: italic;
 }
 /*-----------index------------*/
@@ -124,8 +136,8 @@ footer {
 .tituloIndex {
     text-align: center;
     text-transform: uppercase;
-    font-size: 24px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: map-get($map: $tamañodefuente, $key: "medium" );
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 10px 5px 5px 5px;
     padding-top: 10px;
     overflow-wrap: break-word;
@@ -138,6 +150,8 @@ footer {
     font-style: italic;
     overflow-wrap: break-word;
     text-align: center;
+    padding-right: 5px;
+    padding-left: 5px;
     margin-top: 10px;
     margin-bottom: 20px;
 }
@@ -145,8 +159,8 @@ footer {
 .tituloMarcas {
     text-align: center;
     text-transform: uppercase;
-    font-size: 24px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: map-get($map: $tamañodefuente, $key: "medium" );
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 5px 5px 5px 5px;
     overflow-wrap: break-word;
     text-shadow: 2px 2px rgb(126, 126, 126);
@@ -184,7 +198,7 @@ footer {
         .tituloReseñas {
             text-align: center;
             text-transform: uppercase;
-            font-size: 20px;
+            font-size: map-get($map: $tamañodefuente, $key: "medium" );
             color: black;
         }
         .textoreseñas {
@@ -307,7 +321,7 @@ form {
         width: 95%;
         margin-top: 5px;
         margin-bottom: 5px;
-        font-size: 16px;
+        font-size: map-get($map: $tamañodefuente, $key: "small" );
         font-family: 'Times New Roman', Times, serif;
         .enviar {
             padding-left: 30px;
@@ -319,21 +333,21 @@ form {
         width: 95%;
         height: 90%;
         margin-top: 5px;
-        font-size: 16px;
+        font-size: map-get($map: $tamañodefuente, $key: "small" );
         font-family: 'Times New Roman', Times, serif;
     }
 }
 /*---------------MEDIA-------------*/
-//Variables
-$tablet: 768px;
-$desktop: 1024px;
 
 @media only screen and (min-width: $tablet) {
-    main {
-        margin: 0 10px 0 10px;
+    /*--------index----------------*/
+    #carouselExampleIndicators{ 
+        height: auto;
+        width: 60%;
+        margin-left: auto;
+        margin-right: auto;
     }
 
-    /*--------index----------------*/
     .carousel-item {
         height: auto;
         padding-left: 5px;
@@ -379,8 +393,11 @@ $desktop: 1024px;
     }
 
     /*------------galeria----------*/
+    .margenTablet{
+        margin-left: 25px;
+        margin-right: 25px;
+    }
     .imagenes {
-        margin: 0 20px 0 20px;
         .galeria {
             grid-template-columns: 1fr 1fr;
             column-gap: 10px;
@@ -392,36 +409,40 @@ $desktop: 1024px;
     }
 
     /*--------------NOSOTROS---------*/
+
+    @mixin grid ($inicioColumna, $finColumna, $inicioFila, $finFila) {
+        grid-column-start: $inicioColumna;
+        grid-column-end: $finColumna;
+        grid-row-start: $inicioFila;
+        grid-row-end: $finFila;
+    }
+
     .nosotros1 {
+        @extend .margenTablet;
         grid-template-columns: 1fr 1fr;
         .imgnosotros {
-            grid-column: 1/2;
-            grid-row: 1/2;
+            @include grid (1, 2, 1, 2);
         }
         .contenido {
-        grid-column: 2/3;
-        grid-row: 1/2;
+            @include grid (2, 3, 1, 2);
         }
     }
 
     .galeriainstalaciones {
+        @extend .margenTablet;
         grid-template-columns: 1fr 1fr;
-        gap: 5px;
+        gap: 10px;
         .inst1 {
-            grid-column: 1/2;
-            grid-row: 1/2;
+            @include grid (1, 2, 1, 2);
         }
         .inst2 {
-            grid-column: 2/3;
-            grid-row: 1/2;
+            @include grid (2, 3, 1, 2);
         }
         .inst3 {
-            grid-column: 1/2;
-            grid-row: 2/3;
+            @include grid (1, 2, 2, 3);
         }
         .inst4 {
-            grid-column: 2/3;
-            grid-row: 2/3;
+            @include grid (2, 3, 2, 3);
         }
     }
 
@@ -446,28 +467,22 @@ $desktop: 1024px;
         justify-items: center;
         align-items: center;
         .nombre {
-            grid-column: 1/2;
-            grid-row: 1/2;
+            @include grid (1, 2, 1, 2);
         }
         .apellido {
-            grid-column: 2/3;
-            grid-row: 1/2;
+            @include grid (2, 3, 1, 2);
         }
         .mail {
-            grid-column: 1/2;
-            grid-row: 2/3;
+            @include grid (1, 2, 2, 3);
         }
         .telefono {
-            grid-column: 2/3;
-            grid-row: 2/3;
+            @include grid (2, 3, 2, 3);
         }
         .mensaje {
-            grid-column: 1/3;
-            grid-row: 3/4;
+            @include grid (1, 3, 3, 4);
         }
         .enviar {
-            grid-column: 1/3;
-            grid-row: 4/5;
+            @include grid (1, 3, 4, 5);
             width: 30%;
         }
         textarea {
@@ -487,7 +502,13 @@ $desktop: 1024px;
     }    
 }
 @media only screen and (min-width: $desktop) {
-
+    @mixin grid ($inicioColumna, $finColumna, $inicioFila, $finFila) {
+        grid-column-start: $inicioColumna;
+        grid-column-end: $finColumna;
+        grid-row-start: $inicioFila;
+        grid-row-end: $finFila;
+    }
+    
     /*---------index---------*/
     main .index {
         margin: 0px 30px 0px 30px;
@@ -499,11 +520,16 @@ $desktop: 1024px;
         margin-top: 10px;
         margin-bottom: 5px;
     }
-
+    #carouselExampleIndicators{ 
+        height: auto;
+        width: 60%;
+        margin-left: auto;
+        margin-right: auto;
+    }
     .carousel-item {
         height: auto;
         .d-block {
-            height: 550px;
+            height: 500px;
             width: 100%;
             object-fit: contain;
             padding-top: 10px;
@@ -543,8 +569,10 @@ $desktop: 1024px;
     }
 
     /*------------galeria----------*/
+    .margenDesktop {
+        margin: 0 30px 0 30px;;
+    }
     .imagenes {
-        margin: 0 40px 0 40px;
         .galeria {
             grid-template-columns: 1fr 1fr 1fr;
             .trabajos {
@@ -558,48 +586,46 @@ $desktop: 1024px;
     .nosotros1 {
         grid-template-columns: 1fr 1fr;
         .imgnosotros {
-            grid-column: 1/2;
-            grid-row: 1/2;
+            @include grid (1, 2, 1, 2);
         }
         .contenido {
-            grid-column: 2/3;
-            grid-row: 1/2;
+            @include grid (2, 3, 1, 2);
         }
     }
 
     .galeriainstalaciones {
         grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 15px;
         .inst1 {
-            grid-column: 1/2;
-            grid-row: 1/2;
+            @include grid (1, 2, 1, 2);
         }
         .inst2 {
-            grid-column: 2/3;
-            grid-row: 1/2;
+            @include grid (2, 3, 1, 2);
         }
         .inst3 {
-            grid-column: 3/4;
-            grid-row: 1/2;
+            @include grid (3, 4, 1, 2);
         }
         .inst4 {
-            grid-column: 4/5;
-            grid-row: 1/2;
+            @include grid (4, 5, 1, 2);
         }
     }
 
     /*-----------servicios----------*/
+    .bloqueserv{
+        @extend .margenDesktop;
+    }
     .servicios {
         display: flex;
         flex-direction: row;
         .imgservicios {
             height: 300px;
-            width: 500px;
+            width: 450px;
             margin-top: 20px;
             margin-bottom: 15px;
             object-fit: contain;
         }
         .textoserv {
-            margin: 30px 30px 30px 30px;
+            padding: 30px 30px 30px 30px;
         }
     }
 
