--- a/estilo.scss
+++ b/estilo.scss
@@ -326,7 +326,7 @@ footer {
     }
 
     .mapa {
-        padding-bottom: 10px;
+        padding-bottom: 0px;
     }
 }
 
@@ -335,7 +335,8 @@ footer {
     background-color: dimgrey;
     font-size: map-get($map: $tamañodefuente, $key: "small");
     font-style: italic;
-    padding-bottom: 0;
+    padding-bottom: 5px;
+    margin-bottom: 0;
 }
 
 /*-----------index------------*/
@@ -713,6 +714,18 @@ form {
     .servicios {
         grid-template-columns: 1fr 1fr;
         gap: 20px;
+        @extend .margenTablet ;
+        .imgservicios{
+            height: 300px;
+            width: 450px;
+            margin-top: 20px;
+
+            margin-bottom: 15px;
+            object-fit: contain;
+        }
+        .textoserv {
+            padding: 30px 0px 30px 30px;
+        }
     }
 
     /*------------contacto-------------*/
