--- a/estilo.css
+++ b/estilo.css
@@ -882,7 +882,7 @@ form textarea {
   }
   .servicios .imgservicios {
     height: 300px;
-    width: 450px;
+    width: 380px;
     margin-top: 20px;
     margin-bottom: 15px;
     -o-object-fit: contain;
@@ -890,6 +890,12 @@ form textarea {
   }
   .servicios .textoserv {
     padding: 30px 0px 30px 30px;
+  }
+  .servicios .textoserv h2 {
+    font-size: 20px;
+  }
+  .servicios .textoserv p {
+    font-size: 16px;
   }
   /*------------contacto-------------*/
   form {
