--- a/estilo.css
+++ b/estilo.css
@@ -565,6 +565,7 @@ footer .mapa {
   height: 250px;
   width: 90%;
   margin-bottom: 15px;
+  margin-top: 10px;
 }
 
 #reseñas #client-testimonial-carousel {
