--- a/estilo.scss
+++ b/estilo.scss
@@ -431,6 +431,7 @@ footer {
     height: 250px;
     width: 90%;
     margin-bottom: 15px;
+    margin-top: 10px;
     #client-testimonial-carousel {
     margin-left: 0;
     margin-right: 0;
